<resources>
    <string name="app_name">Masak.in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="drawer_setting">Setting</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_favorite">Favorite</string>
    <string name="drawer_about">About</string>
    <string name="title_activity_drawer_demo">DrawerDemoActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signUp">Sign Up</string>
</resources>
