<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home_menu"
            android:icon="@drawable/ic_action_home"
            android:title="@string/drawer_home" />
        <item
            android:id="@+id/drawer_favorite_menu"
            android:icon="@drawable/ic_action_favorite"
            android:title="@string/drawer_favorite" />
        <item
            android:id="@+id/drawer_setting_menu"
            android:icon="@drawable/ic_action_setting"
            android:title="@string/drawer_setting" />
    </group>
    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/drawer_about_menu"
                android:title="@string/drawer_about" />
        </menu>

    </item>
</menu>